# googletest_cmake_example

./: .ycm_extra_conf.py  CMakeLists.txt  db.dox
config/: data.sql  schema.sql
include/: database_app.hpp  database_connection.hpp  database_interface.hpp  psqlorm.hpp
src/: database_app.cpp  database_connection.cpp  main.cpp
test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
test/googletest/: install_manifest.txt
test/src/: main.cpp
test/src/app/: database_app_test.hpp
